--- a/Stopwatch with Productivity Timer/task/src/main/res/layout/activity_main.xml
+++ b/Stopwatch with Productivity Timer/task/src/main/res/layout/activity_main.xml
@@ -38,6 +38,16 @@
         app:layout_constraintStart_toEndOf="@+id/startButton"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+    <Button
+        android:id="@+id/settingsButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Settings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/startButton" />
+    
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="50dp"
